--- a/Login.html
+++ b/Login.html
@@ -30,7 +30,7 @@
                     <input type="checkbox" checked="checked" name="remember">Remember me
                 </label>
                 <span class="psw">Forgot <a href="">Password?</a></span>
-                <button type="submit" id="Login1" onsubmit="ilham()">Login</button>
+                <button type="submit">Login</button>
             </div>
             <div class="inputb">
                 <p>don't have an account? <a href="Register.html">Register!</a></p>
