--- a/Register.html
+++ b/Register.html
@@ -33,7 +33,7 @@
                 <label>
                     <input type="checkbox" checked="checked" name="remember">Remember me
                 </label>    
-                <button type="submit" id="Login1">Login</button>
+                <button type="submit">Login</button>
             </div>
             <div class="inputb">
                 <p>Alredy have an account? <a href="Login.html">Login</a></p>
