--- a/Login.html
+++ b/Login.html
@@ -21,7 +21,7 @@
     <div class="background1">
         <!-- Modal for Login -->
         <div id="Logins" class="modal">
-            <form class="modal-content" action="Login.html" onsubmit="showAlert()" method="post">
+            <form class="modal-content" action="Login.html" onsubmit="showAlert()" method="get">
                 <!-- Profile Header with Logo and Welcome Text -->
                 <div class="profile">
                     <img src="Images/Logo_SMKN_1_Denpasar_2023-removebg-preview.png" alt="Profile picture" id="pfp">
