--- a/Register.html
+++ b/Register.html
@@ -21,7 +21,7 @@
     <div class="background1">
         <!-- Modal for Login -->
         <div id="Logins" class="modal">
-            <form class="modal-content" action="kelas.html" onsubmit="showAlert()" method="get">
+            <form class="modal-content" action="kelas.html" onsubmit="showAlert()" method="post">
                 <!-- Profile Header with Logo and Welcome Text -->
                 <div class="profile">
                     <img src="Images/Logo_SMKN_1_Denpasar_2023-removebg-preview.png" alt="Profile picture" id="pfp">
@@ -37,7 +37,7 @@
                     <div class="inputa">
                         <label for="username"><b>Username</b></label>
                         <input type="text" id="username" placeholder="Enter Username" name="name" required autofocus>
-
+                        
                         <label for="Email">
                             <input type="email" id="email" placeholder="Enter Email" name=" mail" required>
                         </label>
