--- a/Login.html
+++ b/Login.html
@@ -21,7 +21,7 @@
     <div class="background1">
         <!-- Modal for Login -->
         <div id="Logins" class="modal">
-            <form class="modal-content" action="Login.html" onsubmit="showAlert()" method="get">
+            <form class="modal-content" action="kelas.html" onsubmit="showAlert()" method="post">
                 <!-- Profile Header with Logo and Welcome Text -->
                 <div class="profile">
                     <img src="Images/Logo_SMKN_1_Denpasar_2023-removebg-preview.png" alt="Profile picture" id="pfp">
@@ -47,7 +47,7 @@
                         <input type="checkbox" checked="checked" name="remember"> Remember me
                     </label>
                     <span class="psw">Forgot <a href="#">Password?</a></span>
-    
+                    <div class="aaaa">
                     <!-- Login Button -->
                     <button type="submit" class="login">Login</button>
                 </div>
