--- a/Login.html
+++ b/Login.html
@@ -21,7 +21,7 @@
                         <p>SMK Negeri 1 Denpasar</p>
                     </div>
                 </div>
-                <form action="kelas.html" onsubmit="showAlert()" method="get">
+                <form action="index.html" onsubmit="showAlert()" method="post">
                 <!-- Input Container -->
                 <div class="container">
                     <!-- Username and Password Inputs -->
