--- a/Login.html
+++ b/Login.html
@@ -21,7 +21,7 @@
                         <p>SMK Negeri 1 Denpasar</p>
                     </div>
                 </div>
-                <form action="index.html" onsubmit="showAlert()" method="post">
+                <form action="index.html" onsubmit="showAlert()" method="get">
                 <!-- Input Container -->
                 <div class="container">
                     <!-- Username and Password Inputs -->
@@ -45,7 +45,7 @@
                 
                 <!-- Social and Registration Links -->
                 <div class="inputb">
-                    <p>have an account? <a href="Register.html">Login</a></p>
+                    <p>Not have an account? <a href="Register.html">Login</a></p>
                     
                     <!-- Social Login Buttons -->
                     <button id="Google"><img src="Images/WhatsApp Image 2024-11-11 at 08.21.21_9dbb8665.jpg" id="Gpic">Log in with Google</button>
