--- a/Register.html
+++ b/Register.html
@@ -49,7 +49,7 @@
                     <label>
                         <input type="checkbox" checked="checked" name="remember"> Remember me
                     </label>
-                    <span class="psw">Forgot</span>
+                    <span class="psw"></span>
                     <div class="aaaa">
                     <!-- Login Button -->
                     <button type="submit" class="login">Login</button>
