--- a/Register.html
+++ b/Register.html
@@ -58,7 +58,7 @@
                 
                 <!-- Social and Registration Links -->
                 <div class="inputb">
-                    <p>Alredy have an account? <a href="Login.html"></a>Login</p>
+                    <p>Alredy have an account? <a href="Login.html">Login</a></p>
                     
                     <!-- Social Login Buttons -->
                     <button id="Google"><img src="Images/WhatsApp Image 2024-11-11 at 08.21.21_9dbb8665.jpg" id="Gpic">Log in with Google</button>
