--- a/Register.html
+++ b/Register.html
@@ -35,19 +35,19 @@
                 <div class="container">
                     <!-- Username and Password Inputs -->
                     <div class="inputa">
-                        <label for="username"><b>Username</b></label>
-                        <input type="text" id="username" placeholder="Enter Username" name="name" required autofocus>
+                        <label for="username"><b>Nama</b></label>
+                        <input type="text" id="username" placeholder="Masukan Username" name="name" required autofocus>
                         <label for="Email">
-                            <input type="email" id="email" placeholder="Enter Email" name=" mail" required>
+                            <input type="email" id="email" placeholder="Masukan Email" name=" mail" required>
                         </label>
                         
                         <label for="password"><b>Password</b></label>
-                        <input type="password" id="password" placeholder="Enter Password" name="pass" required>
+                        <input type="password" id="password" placeholder="Masukan Password" name="pass" required>
                     </div>
 
                     <!-- Remember Me and Forgot Password Links -->
                     <label>
-                        <input type="checkbox" checked="checked" name="remember"> Remember me
+                        <input type="checkbox" checked="checked" name="remember"> Ingatkan
                     </label>
                     <span class="psw"></span>
                     <div class="aaaa">
@@ -61,8 +61,8 @@
                     <p>Alredy have an account? <a href="Login.html">Login</a></p>
                     
                     <!-- Social Login Buttons -->
-                    <button id="Google"><img src="Images/WhatsApp Image 2024-11-11 at 08.21.21_9dbb8665.jpg" id="Gpic">Log in with Google</button>
-                    <button id="Facebook"><img src="Images/WhatsApp Image 2024-11-11 at 08.21.20_6dc4adaa.jpg" id="Fpic">Log in with Facebook</button>
+                    <button id="Google"><img src="Images/WhatsApp Image 2024-11-11 at 08.21.21_9dbb8665.jpg" id="Gpic">Register Dengan Google</button>
+                    <button id="Facebook"><img src="Images/WhatsApp Image 2024-11-11 at 08.21.20_6dc4adaa.jpg" id="Fpic">Register Dengan Facebook</button>
                 </div>
             </form>
         </div>
