--- a/Register.html
+++ b/Register.html
@@ -52,7 +52,7 @@
                     <span class="psw"></span>
                     <div class="aaaa">
                     <!-- Login Button -->
-                    <button type="submit" class="login">Login</button>
+                    <button type="submit" class="login">Register</button>
                 </div>
                 </div>
                 
