--- a/Register.html
+++ b/Register.html
@@ -30,7 +30,7 @@
                         <p>SMK Negeri 1 Denpasar</p>
                     </div>
                 </div>
-                <form action="kelas.html" onsubmit="showAlert()" method="get">
+                <form action="index.html" onsubmit="showAlert()" method="get">
                 <!-- Input Container -->
                 <div class="container">
                     <!-- Username and Password Inputs -->
