--- a/Ketuaguild.html
+++ b/Ketuaguild.html
@@ -75,7 +75,7 @@
 </div>
     <div class="centerr">
     <div class=" youtube">
-    <a href="https://www.youtube.com/@ZyyMknGorengan" class="youtube">
+    <a href="https://youtu.be/oqk1eEjByvI?si=AGxkoSaSkHdlqQiw" class="youtube">
       <img src="Images/unnamed-removebg-preview.png" alt="" class="youtube">
       </a>
       <div>
@@ -83,7 +83,7 @@
         
         </div>
     <div class="instagram">
-        <a href="https://www.instagram.com/zyy_ymakan_gorengan/" class = >
+        <a href="https://www.instagram.com/smkn1denpasar?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class = >
             <img src="Images/Instagram_logo_2022.svg-removebg-preview.png" alt="" class="instagram">
             </a>
             </div>  
@@ -105,7 +105,6 @@
   <div class="copykanan">
     <i class="fas fa-copyright"></i> <p> 2024 Tkp (Teknik Konstruksi dan Bangunan)</p>
   </div>
-
 </footer>   
 <script src="heade.js"></script>
 </body>
