--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
     <h1>TKP(Teknik Konstruksi dan Perumahan)</h1>
     <p>Teknik Konstruksi dan Perumahan <br>Kami Di Sini Mempelajari Tentang Konstruksi sebagaimana rumah agar berdiri kokoh dan tahan lama. dan <br>
         furnitur perkayuan ,pengukuran perancanaan peruntungan biaya</p>
-<div class="badan"></div>
+<div class="badan">
+    <div class="tengag">
+
+    </div>
+</div>
 </div>
 <div class=" ngurutin">
+    <div>
     <div class="dalem">
         <div class="profile-footer">
             <div></div>
@@ -68,6 +73,7 @@
         </div>
         </div>
     </div>
+</div>
 </div>
 <div class="ngurutin2">
     <div class="bg">
