--- a/Ketuaguild.html
+++ b/Ketuaguild.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Teacher Detail</title>
     <link rel="stylesheet" href="Header.css">
     <link rel="stylesheet" href="Tch9.css">
     <link rel="stylesheet" href="Footer.css">
+    <title>Detail I Made Rai Arsa,S.Pd,M.Pd</title>
 </head>
 <body>
     <header class="pena">
