--- a/KlsX.html
+++ b/KlsX.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="KlsX.Css">
     <link rel="stylesheet" href="Footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Document</title>
+    <title>Kelas X</title>
 </head>
 <body>
     <header class="pena">
